--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./cert/:/cert/"
-      - "./config/:/etc/traefik/:ro"
+      - "./data/:/cert/"
+      - "./conf/:/etc/traefik/:ro"
     labels:
       - "traefik.enable=false" # set to true to expose Monitoring & API
       - "traefik.backend=proxy"
