Use less verbose logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ networks:
 
 services:
   proxy:
-    image: "traefik"
-    command: "--logLevel=INFO"
+    image: "traefik:1.5"
+    command: "--logLevel=ERROR"
     ports:
       - "80:80"
       - "443:443"
